@@ -1,3 +1,10 @@
+ags (4.0.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed rename machine dialog and machine selector popover
+	* fixed rename machine audio dialog
+	* fixed reposition machine audio dialog
+
 ags (4.0.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
